[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "hybrid_renewable_pypsa" }
]
name = "Hybrid Renewable PyPSA Network Analysis"
version = "0.2.0"
description = "Analysis of a hybrid renewable energy network using PyPSA (Python for Power System Analysis)"
authors = ["Chrispine Tinega <hello@chrispinetinega.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pypsa = "^0.33.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
cartopy = "^0.24.1"
numpy = "1.26.4"
plotly = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
sphinx = "^8.1.3"
ruff = "^0.9.1"
black = "^25.1.0"
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"
mypy = "^1.15.0"

[tool.mypy]
python_version = "3.10"
strict = true

warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true

ignore_missing_imports = false
follow_imports = "silent"

mypy_path = "hybrid_renewable_pypsa/src"

exclude = [
    '^cwd/.*$',        # Standalone scripts for generating profiles
    '^tests/.*$',      # Test scripts may not need strict typing
    '^docs/.*$',       # Documentation folder
    '^data/.*$',       # Raw CSV data, profiles, metadata, etc.
    '^results/.*$',    # Output plots and HTML reports
    '^\.github/.*$',   # CI/CD workflow files
]

# MyPy per-module options:

# Enforce strict typing in core source code (`src/`)
[[tool.mypy.overrides]]
module = "src.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true

# Allow standalone scripts (`cwd/`) to have untyped functions
[[tool.mypy.overrides]]
module = "cwd.*"
disallow_untyped_defs = false

# Allow missing imports for external libraries (e.g., PyPSA dependencies)
[[tool.mypy.overrides]]
module = [
    "pypsa",
    "pandas",
    "numpy",
    "matplotlib",
    "scipy"
]
ignore_missing_imports = true

# Tests should allow untyped function definitions
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
