[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "hybrid_renewable_pypsa" }
]
name = "Hybrid Renewable PyPSA Network Analysis"
version = "0.2.0"
description = "Analysis of a hybrid renewable energy network using PyPSA (Python for Power System Analysis)"
authors = ["Chrispine Tinega <hello@chrispinetinega.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pypsa = "^0.35.2"
pandas = "^2.3.2"
matplotlib = "^3.10.6"
cartopy = "^0.25.0"
numpy = "2.3.3"
plotly = "^6.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
sphinx = "^8.2.3"
ruff = "^0.13.1"
black = "^25.9.0"
pre-commit = "^4.3.0"
ipykernel = "^6.30.1"
